# AssistedVoice

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  Dockerfile  FEATURES.md  README.md  UI_TEST_RESULTS.md  assistant.py  config.yaml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  run_bot.py  setup.sh  start.sh  test_chunking.py  test_chunking_v2.py  test_edge_tts.py  vitest.config.js  web_assistant.py  web_assistant_simple.py  web_assistant_streaming.py
.agent/: instructions.md
archive/python/: assistant.py  test_tts_backend.py  (+2 more)
docs/: PHASE3_IMPLEMENTATION.md  TODO_SETTINGS.md
models/: schemas.py
modules/: config_helper.py  llm.py  llm_base.py  llm_cloud.py  llm_factory.py  llm_lmstudio.py  stt.py  tts.py  ui.py
routers/: api.py  pages.py  reading_handlers.py  websocket.py
services/: audio_service.py  chat_service.py  database_service.py  live_assistant_service.py  mcp_service.py  model_service.py  reading_service.py  search_service.py  sharing_service.py  signal_bot_service.py
signal_bot/: ai.py  chatops_bot.py  commands.py  config.py  ha_client.py  requirements_legacy.txt  signal_client.py  test_keys.py  utils.py
signal_data/: jsonrpc2.yml
static/: app.js  app_multi_mode.js  app_simple.js  app_streaming.js  assisted-voice.css  audio-processor.js  style-simple.css  style.css  style_simple.css  style_streaming.css
templates/: audio_test.html  index.html  index_simple.html
tests/: __init__.py  test_edge_tts_generation.py  test_mcp_logic.py  test_sharing.py  verify_persistence.py
(+47 files in other folders)
